--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+.striker{
+  text-decoration: line-through;
+}
+
+.pb-10{
+  padding-bottom: 10px;
+}
+
+.form-inline{
+  margin-inline-start: auto;
+}
