--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,7 +1,5 @@
-<% provide(:submit_button, "Update To-Do") %>
-<h1>Editing List</h1>
+<!--% provide(:submit_button, "Update To-Do") %>
+<h1 class="text-center">Editing List</h1>
+<hr-->
 
-<%= render 'form', list: @list %>
-
-<%= link_to 'Show', @list %> |
 <%= link_to 'Back', lists_path %>
