--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:submit_button, "Add To-Do") %>
-<h1>New List</h1>
+<%# provide(:submit_button, "Add To-Do") %>
+<!--h1>New List</h1>
 
 <%= render 'form', list: @list %>
 
