--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,9 @@
-<p id="notice"><%= notice %></p>
-
 <h1>TO-DO's</h1>
 
 <table class="table table-bordered">
   <thead>
     <tr>
+      <th>Completed</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -12,16 +11,24 @@
 
   <tbody>
     <% @lists.each do |list| %>
-      <tr class="<%= "table-secondary" if list.completed? %>">
-        <td><%= list.description %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr class=<%= "table-secondary" if list.completed? %>>
+        <td>
+          <%= form_with(model: list, local: true) do |f| %>
+            <%= f.check_box :completed, id: :list_completed %>
+            <%= f.submit "Update To-Do", class: "btn btn-success mb-1 ml-1" %>
+          <% end %>
+        </td>
+        <td class=<%= "striker" if list.completed? %>><%= link_to list.description, edit_list_path(list), class: "text-decoration-none" %></td>
+        <td class="text-center"><%= link_to 'Delete', list, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'Add To-Do', new_list_path, class: "btn btn-secondary" %>
+<%= link_to "Delete finished tasks", home_del_comp_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
+<%= link_to "Delete all tasks", home_del_all_path, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
+<!--% provide(:submit_button, "Add ToDo") %>
+<h1 class="text-center">Add ToDo</h1>
+<hr>
+<div class="pb-10"><%= render 'form', list: @list %></div-->
